[package]
name = "metriq"
description = "Structured logging for solana smart contracts"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/shamwow/matriq/"
license = "MIT"
keywords = ["solana", "logging", "metrics"]

[dependencies]
solana-program = "^1.8"
numtoa = "^0.2.4"
bs58 = "^0.4.0"

[dev-dependencies]
criterion = "^0.3.5"

[[bench]]
name = "benches"
harness = false